--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Teste Git</title>
+	<title>Boraaaa</title>
 </head>
 <body>
-Uhuuuu
+Boraaaaa
 </body>
 </html>
